scss/partials/_scaffolding.scss
/*********************/
/* Clear Fix         */
/*********************/

$content-width-max: 1124px;
$feature-width-max: 900px;

html {
  box-sizing: border-box;
}
*, *:before, *:after {
  box-sizing: inherit;
}

.cf:before,
.cf:after {
    content: " "; /* 1 */
    display: table; /* 2 */
}

.cf:after {
    clear: both;
}

/**
 * For IE 6/7 only
 * Include this rule to trigger hasLayout and contain floats.
 */
.cf {
    *zoom: 1;
}


.row:before,
.row:after {
    content: " "; /* 1 */
    display: table; /* 2 */
}

.row:after {
    clear: both;
}

/**
 * For IE 6/7 only
 * Include this rule to trigger hasLayout and contain floats.
 */
.row {
    *zoom: 1;
}


.row, .rowalt {

  .span-15 {
    float: left;
    width: 15%;
  }
  
  .span-25 {
    float: left;
    width: 25%;
  }

  .span-50 {
    float: left;
    width: 50%;
  }

  .span-75 {
    float: left;
    width: 75%;
  }

  .span-33 {
    float: left;
    width: 33%;
  }

  .span-66 {
    float: left;
    width: 66%;
  }

  .span-10 {
    float: left;
    width: 10%;
  }
  
  .right_margin{
	  margin-right: 4em;
  }


}

.flex-row-wrapper.removepadding {
	padding-top: 0rem;
	padding-bottom: 0rem;
}

.flex-row-wrapper {
	margin: 0 auto;
	max-width: 1120px;
	padding-left: 1.5rem;
	padding-right: 1.5rem;
	padding-top: 2rem;
	padding-bottom: 2rem;

	.overhangbottom {
		margin-bottom: -2rem;
	}

	.overhangtop {
		margin-top: -2rem;
	}
}

.flex-row {
	display: flex;
	flex-wrap: wrap;
	
	/*margin-bottom: 1rem;*/
	 
	
	.flex-item {
		padding-top: 2rem;
		padding-bottom: 2rem;
	}
}

.flex-5050 {
	.flex-item {
		width: 50%;
	}
	
	.flex-leftCol {
		padding-right: 2rem;
	}
	
	.flex-rightCol {
		padding-left: 0rem;
		
	}
}

.flex-6633 {
	.flex-leftCol {
		width: 66%;
		padding-right: 2rem;
	}
	
	.flex-rightCol {
		width: 33%;
		padding-left: 2rem;
	}
}

.flex-3366 {
	.flex-leftCol {
		width: 33%;
		padding-right: 2rem;
	}
	
	.flex-rightCol {
		width: 66%;
		padding-left: 2rem;
	}
}

.flex-7525 {
	.flex-leftCol {
		width: 75%;
		padding-right: 2rem;
	}
	
	.flex-rightCol {
		width: 25%;
		padding-left: 2rem;
	}
}


.flex-2575 {
	.flex-leftCol {
		width: 25%;
		padding-right: 2rem;
	}
	
	.flex-rightCol {
		width: 75%;
		padding-left: 2rem;
	}
}

.flex-333333 {
	flex-wrap: nowrap;
	
	.flex-item {
		width: 33%;
		
	}	
	
	.flex-item:nth-child(1) {
		
		margin-right: 1rem;
	}
	
	.flex-item:nth-child(2) {
		margin-left: 1rem;
		margin-right: 1rem;
	}
	
	.flex-item:nth-child(3) {
		
		margin-left: 1rem;
	}
}


.flex-255025 {
	flex-wrap: nowrap;
	
	.flex-item {
		width: 25%;
		
	}	
	
	.flex-item:nth-child(1) {
		
		margin-right: 1rem;
	}
	
	.flex-item:nth-child(2) {
		margin-left: 1rem;
		margin-right: 1rem;
		width: 50%;
	}
	
	.flex-item:nth-child(3) {
		
		margin-left: 1rem;
	}
}

.flex-252550 {
	flex-wrap: nowrap;
	
	.flex-item {
		width: 25%;
		
	}	
	
	.flex-item:nth-child(1) {
		
		margin-right: 1rem;
	}
	
	.flex-item:nth-child(2) {
		margin-left: 1rem;
		margin-right: 1rem;
		
	}
	
	.flex-item:nth-child(3) {
		width: 50%;
		margin-left: 1rem;
	}
}

.flex-502525 {
	flex-wrap: nowrap;
	
	.flex-item {
		width: 25%;
		
	}	
	
	.flex-item:nth-child(1) {
		width: 50%;
		margin-right: 1rem;
	}
	
	.flex-item:nth-child(2) {
		margin-left: 1rem;
		margin-right: 1rem;
		
	}
	
	.flex-item:nth-child(3) {
		
		margin-left: 1rem;
	}
}


.right_redbg {
	.flex-rightCol {
		padding-left: 2rem;
		padding-right: 2rem;
	}
}

.left_redbg {
	.flex-leftCol {
		padding-left: 2rem;
		padding-right: 2rem;
	}
}

/* Minimum width of 700 pixels. */
@media screen and (max-width: 700px) {
	.flex-2575, .flex-7525, .flex-3366, .flex-6633, .flex-5050, .flex-333333 {
		display: block;
		
		.flex-item {
			padding-bottom: 0rem; 
			margin-left: 0rem;
			margin-right: 0rem;
		}
		
		.flex-leftCol {
			width: 100%;
			padding-right: 0rem;
		}
		
		.flex-rightCol {
			width: 100%;
			padding-left: 0rem;
			
		}

		.flex-item:nth-child(1), .flex-item:nth-child(2), .flex-item:nth-child(3) {
			margin-left: 0rem;
			margin-right: 0rem;
		}

		
	}

	.home .pagePadding .flex-row.top-row.right_redbg div.flex-rightCol {
			margin-top: 0px;
	}
}

